--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div class="age-input">
           <div>
             <label for="day">Day</label>
-            <input type="text" class="day-input" name="day" placeholder="DD" maxlength="2" required>
+            <input type="text" class="day-input" name="day" placeholder="DD" maxlength="2" required autocomplete="off">
             <p id="error-p"></p>
           </div>
 
           <div>
             <label for="month">Month</label>
-            <input type="text" class="month-input" name="month" placeholder="MM" maxlength="2" required>
+            <input type="text" class="month-input" name="month" placeholder="MM" maxlength="2" required autocomplete="off">
             <p id="error-p"></p>
           </div>
 
           <div>
             <label for="year">Year</label>
-            <input type="text" class="year-input" name="year" placeholder="YYYY" maxlength="4" required>
+            <input type="text" class="year-input" name="year" placeholder="YYYY" maxlength="4" required autocomplete="off">
             <p id="error-p"></p>
           </div>
         </div>
